--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>BIBI福利社</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <link href="https://cdn.bootcss.com/viewerjs/0.10.0/viewer.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/viewer.js/0.11.1/crocodoc.viewer.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
@@ -37,9 +37,9 @@
         }
       }
     </script>
-    <script src="https://cdn.bootcss.com/fetch/2.0.3/fetch.min.js"></script>
-    <script src="https://cdn.bootcss.com/babel-polyfill/6.26.0/polyfill.min.js"></script>
+    <script src="https://cdn.bootcss.com/fetch/3.0.0/fetch.min.js"></script>
+    <script src="https://cdn.bootcss.com/babel-polyfill/7.0.0-rc.4/polyfill.min.js"></script>
     <script src="http://blog.simplenaive.cn/Issue-Blog/dist/build.js"></script>
-    <script src="https://cdn.bootcss.com/viewerjs/0.10.0/viewer.min.js"></script>
+    <script src="https://cdn.bootcss.com/viewerjs/1.3.0/viewer.min.js"></script>
   </body>
 </html>
