--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <img src="https://ws4.sinaimg.cn/large/9d9a4ee4ly1fs70gr5agxj20bw0bwjsm.jpg" alt="Cangku">
+      <img src="https://ws4.sinaimg.cn/large/9d9a4ee4ly1fs70gr5agxj20bw0bwjsm.jpg" alt="BIBI">
       <h1>BIBI福利社</h1>
       <h2>https://99kjy.xyz</h2>
       <a class="button" href="https://99kjy.xyz" target="_blank">点击访问</a>
