--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>BIBI福利社发布页</title>
+  <title>BIBI福利社發布頁</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="cangku">
-  <meta name="description" content="BIBI福利社发布页">
+  <meta name="description" content="BIBI福利社發布頁">
   <meta name="keywords" content="BIBI">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -17,7 +17,7 @@
       <img src="https://i.loli.net/2018/12/25/5c21f8b0a4a93.jpg" alt="BIBI">
       <h1>BIBI福利社</h1>
       <h2>https://99kjy.xyz</h2>
-      <a class="button" href="https://99kjy.xyz" target="_blank">点击访问</a>
+      <a class="button" href="https://99kjy.xyz" target="_blank">點擊訪問</a>
     </div>
   </div>
 </body>
