--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>BIBI福利社發布頁</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="cangku">
+  <meta name="author" content="BIBI">
   <meta name="description" content="BIBI福利社發布頁">
   <meta name="keywords" content="BIBI">
   <link rel="stylesheet" href="css/style.css">
